:fire: Rename gpio

--- a/gpio_test/client/CMakeLists.txt
+++ b/gpio_test/client/CMakeLists.txt
@@ -5,7 +5,7 @@ include (platform/nk)
 
 nk_build_edl_files (client_edl_files NK_MODULE "client" EDL "${CMAKE_SOURCE_DIR}/resources/edl/Client.edl")
 
-add_executable (Client "src/gpio.c")
+add_executable (Client "src/main.cpp" "src/Motor.h")
 add_dependencies (Client client_edl_files)
 target_link_libraries (Client ${gpio_CLIENT_LIB})
 
