--- a/alphabot/einit/src/init.yaml.in
+++ b/alphabot/einit/src/init.yaml.in
@@ -1,13 +1,13 @@
 entities:
 
-- name: alphabot.Subscriber
+- name: mosquitto.Subscriber
   env:
     VFS_FILESYSTEM_BACKEND: client:@ROOTFS_ENTITY@
     VFS_NETWORK_BACKEND: client:kl.VfsNet
     MQTT_BROKER_ADDRESS: "10.0.2.2"
     MQTT_BROKER_PORT: "1883"
   connections:
-  - target: alphabot.Showapp
+  - target: mosquitto.Showapp
     id: showapp_connection
   - target: kl.VfsNet
     id: kl.VfsNet
@@ -31,7 +31,7 @@ entities:
     id: @ROOTFS_ENTITY@
 @INIT_Ntpd_ENTITY_CONNECTIONS+@
 
-- name: alphabot.Showapp
+- name: mosquitto.Showapp
 @INIT_Showapp_ENTITY_CONNECTIONS+@
 
 @INIT_EXTERNAL_ENTITIES@
