--- a/alphabot/subscriber/CMakeLists.txt
+++ b/alphabot/subscriber/CMakeLists.txt
@@ -11,7 +11,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -Wno-deprecated-declaratio
 add_executable (Subscriber "src/main.cpp" "src/subscriber.cpp" )
 add_dependencies (Subscriber subscriber_edl_files)
 target_link_libraries(Subscriber 
-                      ${alphabot_CXX_LIB}
+                      ${mosquitto_CXX_LIB}
                       ${vfs_CLIENT_LIB}
 )
 
