--- a/alphabot/showapp/CMakeLists.txt
+++ b/alphabot/showapp/CMakeLists.txt
@@ -11,4 +11,9 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -Wno-deprecated-declaratio
 add_executable (Showapp "src/showapp.cpp" "src/Motor.hpp")
 add_dependencies (Showapp showapp_edl_files)
 
-target_link_libraries (Client ${gpio_CLIENT_LIB})
+target_link_libraries (Showapp ${gpio_CLIENT_LIB})
+
+target_link_libraries (Showapp ${bsp_CLIENT_LIB})
+
+set_target_properties (Showapp PROPERTIES LINK_FLAGS ${VULN_LDFLAGS})
+
